feat(commands): Add proper permission handling for subcommands